--- a/delivery.html
+++ b/delivery.html
@@ -45,7 +45,6 @@
     }
     .logout-btn:hover { background: #dc2626; }
 
-    /* FILTER BUTTONS */
     .filter-tabs {
       display: flex; gap: .8rem; margin: 1rem 0; flex-wrap: wrap;
       padding: .5rem 0; overflow-x: auto; white-space: nowrap;
@@ -62,7 +61,6 @@
     }
     .filter-btn:hover:not(.active) { background: #475569; }
 
-    /* CARD STYLING */
     .card {
       background: var(--card-bg); border-radius: 0.75rem;
       box-shadow: 0 4px 15px rgba(0,0,0,.3); padding: 1.5rem;
@@ -108,8 +106,21 @@
     h1 { font-size: 1.8rem; font-weight: 700; display: flex; align-items: center; gap: .5rem; }
     h1 svg { color: var(--primary); }
 
-    .refresh-info {
-      font-size: 0.8rem; color: var(--text for muted); text-align: center; margin-top: 1rem;
+    /* FULL SCREEN ALERT */
+    .new-order-alert {
+      position: fixed; top: 0; left: 0; width: 100vw; height: 100vh;
+      background: rgba(239, 68, 68, 0.98); color: white; z-index: 99999;
+      display: flex; flex-direction: column; justify-content: center; align-items: center;
+      font-size: 4rem; font-weight: 900; text-align: center; letter-spacing: 3px;
+      animation: flash 0.8s infinite alternate; display: none;
+      user-select: none; backdrop-filter: blur(5px);
+    }
+    @keyframes flash {
+      from { background: rgba(239, 68, 68, 0.98); }
+      to { background: rgba(220, 38, 38, 1); }
+    }
+    .new-order-alert small {
+      font-size: 2rem; margin-top: 2rem; font-weight: 600;
     }
   </style>
 </head>
@@ -123,13 +134,18 @@
     <symbol id="i-logout" viewBox="0 0 24 24"><path d="M16 13v-2H7V9l-5 3 5 3v-2zm5-8h-9c-1.1 0-2 .9-2 2v2h2V7h9v10h-9v-2H8v2c0 1.1.9 2 2 2h9c1.1 0 2-.9 2-2V7c0-1.1-.9-2-2-2z"/></symbol>
   </svg>
 
+  <!-- FULL SCREEN ALERT -->
+  <div id="bigAlert" class="new-order-alert">
+    <div>NEW ORDER!</div>
+    <small>Check the portal now!</small>
+  </div>
+
   <div class="container">
     <div class="header">
       <h1>Delivery Portal</h1>
       <button id="logoutBtn" class="logout-btn">Logout</button>
     </div>
 
-    <!-- FILTER BUTTONS -->
     <div class="filter-tabs">
       <button class="filter-btn active" data-filter="active">Active Orders</button>
       <button class="filter-btn" data-filter="delivered">Delivered</button>
@@ -149,10 +165,13 @@
       <p>No orders in this category right now.</p>
     </div>
 
-    <div class="refresh-info">Auto-refresh every 5 seconds</div>
+    <div style="text-align:center; color:#64748b; font-size:0.85rem; margin-top:2rem;">
+      Auto-refresh every 5 seconds • New orders trigger full-screen alert
+    </div>
   </div>
 
-  <audio id="notificationSound" src="ringtone.mp3" preload="auto"></audio>
+  <!-- LOUD ALARM SOUND (free & loud) -->
+  <audio id="loudSound" src="https://assets.mixkit.co/sfx/preview/mixkit-alarm-digital-clock-beep-989.mp3" preload="auto"></audio>
 
   <script>
     const API_BASE = window.location.origin;
@@ -166,7 +185,8 @@
     const ordersContainer = $('#orders-container');
     const loadingEl = $('#loading');
     const emptyEl = $('#empty');
-    const sound = $('#notificationSound');
+    const bigAlert = $('#bigAlert');
+    const loudSound = $('#loudSound');
 
     const icon = name => `<svg class="icon"><use href="#i-${name}"/></svg>`;
 
@@ -177,6 +197,17 @@
       cancelled: '<span class="badge badge-cancelled">Cancelled</span>'
     }[status] || '<span class="badge badge-pending">Pending</span>');
 
+    const showBigAlert = () => {
+      bigAlert.style.display = 'flex';
+      loudSound.currentTime = 0;
+      loudSound.volume = 1.0;
+      loudSound.play();
+
+      setTimeout(() => {
+        bigAlert.style.display = 'none';
+      }, 10000); // auto hide after 10 seconds
+    };
+
     const renderCard = order => {
       const itemsHtml = order.items.map(i => `
         <div class="flex justify-between text-sm text-gray-300 mt-1">
@@ -186,18 +217,16 @@
 
       let actions = '';
       if (order.status === 'pending') {
-        actions = `
-          <div class="flex gap-2 mt-4 flex-wrap">
-            <button class="btn btn-primary" data-id="${order._id}" data-action="confirmed">Confirm</button>
-            <button class="btn btn-success" data-id="${order._id}" data-action="delivered">Delivered</button>
-            <button class="btn btn-danger" data-id="${order._id}" data-action="cancelled">Cancel</button>
-          </div>`;
+        actions = `<div class="flex gap-2 mt-4 flex-wrap">
+          <button class="btn btn-primary" data-id="${order._id}" data-action="confirmed">Confirm</button>
+          <button class="btn btn-success" data-id="${order._id}" data-action="delivered">Delivered</button>
+          <button class="btn btn-danger" data-id="${order._id}" data-action="cancelled">Cancel</button>
+        </div>`;
       } else if (order.status === 'confirmed') {
-        actions = `
-          <div class="flex gap-2 mt-4 flex-wrap">
-            <button class="btn btn-success" data-id="${order._id}" data-action="delivered">Delivered</button>
-            <button class="btn btn-danger" data-id="${order._id}" data-action="cancelled">Cancel</button>
-          </div>`;
+        actions = `<div class="flex gap-2 mt-4 flex-wrap">
+          <button class="btn btn-success" data-id="${order._id}" data-action="delivered">Delivered</button>
+          <button class="btn btn-danger" data-id="${order._id}" data-action="cancelled">Cancel</button>
+        </div>`;
       }
 
       return `
@@ -240,7 +269,6 @@
     const renderAll = () => {
       ordersContainer.innerHTML = allOrders.map(renderCard).join('');
       applyFilter();
-      window.scrollTo(0, 0); // optional: scroll to top on refresh
     };
 
     const fetchOrders = async () => {
@@ -249,19 +277,18 @@
         const data = await res.json();
 
         if (data.success && Array.isArray(data.orders)) {
-          const newPending = data.orders.filter(o => o.status === 'pending').length;
+          const currentPending = data.orders.filter(o => o.status === 'pending').length;
 
-          if (newPending > previousPendingCount && newPending > 0) {
-            sound.currentTime = 0;
-            sound.play().catch(() => {});
+          if (currentPending > previousPendingCount && currentPending > 0) {
+            showBigAlert(); // FULL SCREEN + LOUD SOUND
           }
-          previousPendingCount = newPending;
+          previousPendingCount = currentPending;
 
           allOrders = data.orders;
           renderAll();
         }
       } catch (e) {
-        console.error("Fetch failed:", e);
+        console.error("Fetch error:", e);
       } finally {
         loadingEl.style.display = 'none';
       }
@@ -277,7 +304,7 @@
       });
     });
 
-    // Status update
+    // Status update buttons
     ordersContainer.addEventListener('click', async e => {
       const btn = e.target.closest('button[data-action]');
       if (!btn || btn.disabled) return;
@@ -295,7 +322,6 @@
           body: JSON.stringify({ orderId, status: newStatus })
         });
         const data = await res.json();
-
         if (data.success) {
           const idx = allOrders.findIndex(o => o._id === data.order._id);
           if (idx !== -1) allOrders[idx] = data.order;
