--- a/admin.html
+++ b/admin.html
@@ -3,190 +3,186 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Admin Panel | Chat Point</title>
-  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;600;700;800&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
+  <title>ChatPoint - Admin Panel</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"/>
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet"/>
   <style>
-    :root{
-      --bg: #fffaf2; --card: #ffffff; --text: #111111; --muted: #6b6b6b;
-      --primary: #75d133d5; --accent: #036487; --shadow: rgba(17,17,17,0.06);
-      --radius: 16px;
-    }
-    *{box-sizing:border-box;margin:0;padding:0;font-family:"Outfit",system-ui;}
-    body{background:linear-gradient(180deg,var(--bg), #fff6da 120px);color:var(--text);min-height:100vh;padding:20px}
-    .container{max-width:1000px;margin:auto;background:var(--card);border-radius:var(--radius);box-shadow:0 20px 50px var(--shadow);overflow:hidden}
-    header{background:var(--primary);color:#111;padding:20px;text-align:center;font-size:24px;font-weight:800}
-    .tabs{display:flex;background:#f0f0f0}
-    .tab-btn{flex:1;padding:16px;font-weight:700;cursor:pointer;border:none;background:transparent}
-    .tab-btn.active{background:var(--primary);color:#111}
-    .tab-content{padding:30px;display:none}
-    .tab-content.active{display:block}
-    input, textarea, select{width:100%;padding:12px;border-radius:12px;border:1px solid #ddd;margin:10px 0;font-size:16px}
-    button{padding:14px 24px;background:var(--accent);color:white;border:none;border-radius:12px;font-weight:700;cursor:pointer;margin-top:10px}
-    button:hover{background:#024c68}
-    .image-preview{display:grid;grid-template-columns:repeat(auto-fill,minmax(100px,1fr));gap:10px;margin:15px 0}
-    .preview-img{position:relative;width:100px;height:100px;object-fit:cover;border-radius:12px;border:2px solid var(--primary)}
-    .remove-img{position:absolute;top:-8px;right:-8px;background:red;color:white;width:24px;height:24px;border-radius:50%;cursor:pointer}
-    .shop-list{display:grid;gap:20px;margin-top:30px}
-    .shop-card{background:#f9f9f9;padding:20px;border-radius:12px;border:1px solid #eee}
-    .success{color:green;font-weight:700;margin:15px 0}
+    body { background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+    min-height: 100vh;
+    font-family: 'Segoe UI', sans-serif;
+    color: #333;
+  }
+  .card { border: none; border-radius: 15px; box-shadow: 0 10px 30px rgba(0,0,0,0.2); }
+  .btn-primary { background: #667eea; border: none; }
+  .btn-success { background: #28a745; }
+  .preview-img { width: 80px; height: 80px; object-fit: cover; border-radius: 10px; margin: 5px; border: 2px solid #667eea; }
+  h1 { color: white; text-shadow: 0 2px 10px rgba(0,0,0,0.3); }
   </style>
 </head>
 <body>
-  <div class="container">
-    <header>Chat Point - Admin Panel</header>
-    
-    <div class="tabs">
-      <button class="tab-btn active" onclick="openTab('add-shop')">Add New Shop</button>
-      <button class="tab-btn" onclick="openTab('add-items')">Add Items</button>
-      <button class="tab-btn" onclick="openTab('view-shops')">View Shops</button>
+  <div class="container py-5">
+    <h1 class="text-center mb-5"><i class="fas fa-crown"></i> ChatPoint Admin Panel</h1>
+
+    <!-- Add New Shop -->
+    <div class="card mb-4">
+      <div class="card-header bg-primary text-white">
+        <h4><i class="fas fa-store"></i> Add New Shop</h4>
+      </div>
+      <div class="card-body">
+        <form id="shopForm">
+          <div class="row g-3">
+            <div class="col-md-4">
+              <input type="text" class="form-control" placeholder="Shop Name *" id="shopName" required>
+            </div>
+            <div class="col-md-4">
+              <input type="text" class="form-control" placeholder="Owner Name" id="ownerName">
+            </div>
+            <div class="col-md-3">
+              <input type="text" class="form-control" placeholder="Mobile" id="shopMobile">
+            </div>
+            <div class="col-12 col-md-1">
+              <button type="submit" class="btn btn-primary w-100"><i class="fas fa-plus"></i></button>
+            </div>
+          </div>
+        </form>
+      </div>
     </div>
 
-    <!-- Add Shop -->
-    <div id="add-shop" class="tab-content active">
-      <h2>Add New Shop</h2>
-      <input type="text" id="shopName" placeholder="Shop Name" required>
-      <input type="text" id="ownerName" placeholder="Owner Name">
-      <input type="text" id="mobile" placeholder="Mobile Number">
-      <button onclick="addShop()">Add Shop</button>
-      <div id="shopMsg"></div>
+    <!-- Add Item -->
+    <div class="card">
+      <div class="card-header bg-success text-white">
+        <h4><i class="fas fa-utensils"></i> Add New Item</h4>
+      </div>
+      <div class="card-body">
+        <form id="itemForm" enctype="multipart/form-data">
+          <div class="row g-3 align-items-end">
+            <div class="col-md-3">
+              <select class="form-select" id="shopSelect" required>
+                <option value="">Choose Shop *</option>
+              </select>
+            </div>
+            <div class="col-md-3">
+              <input type="text" class="form-control" placeholder="Item Name *" id="itemName" required>
+            </div>
+            <div class="col-md-2">
+              <input type="number" class="form-control" placeholder="Price *" id="itemPrice" required>
+            </div>
+            <div class="col-md-2">
+              <input type="text" class="form-control" placeholder="Description (optional)" id="itemDesc">
+            </div>
+            <div class="col-md-3">
+              <input type="file" class="form-control" id="itemImages" accept="image/*" multiple>
+              <small class="text-muted">Max 10 images</small>
+            </div>
+            <div class="col-12 col-md-1">
+              <button type="submit" class="btn btn-success w-100">Add</button>
+            </div>
+          </div>
+
+          <div id="imagePreview" class="mt-3"></div>
+        </form>
+      </div>
     </div>
 
-    <!-- Add Items -->
-    <div id="add-items" class="tab-content">
-      <h2>Add Items to Shop</h2>
-      <select id="itemShopSelect"><option>Loading shops...</option></select>
-      <input type="text" id="itemName" placeholder="Item Name" required>
-      <input type="number" id="itemPrice" placeholder="Price ₹" required>
-      <textarea id="itemDesc" placeholder="Description (optional)"></textarea>
-      <input type="file" id="itemImages" multiple accept="image/*">
-      <div class="image-preview" id="imagePreview"></div>
-      <button onclick="addItem()">Add Item</button>
-      <div id="itemMsg"></div>
-    </div>
-
-    <!-- View Shops -->
-    <div id="view-shops" class="tab-content">
-      <h2>All Shops & Items</h2>
-      <div id="shopsList">Loading...</div>
+    <!-- Success Message -->
+    <div id="successAlert" class="alert alert-success mt-4 d-none" role="alert">
+      <i class="fas fa-check-circle"></i> <span id="successMsg"></span>
     </div>
   </div>
 
   <script>
-    const API = location.origin;
+    const API = "" ; // works on same domain
 
-    function openTab(tabName) {
-      document.querySelectorAll('.tab-content').forEach(t => t.classList.remove('active'));
-      document.querySelectorAll('.tab-btn').forEach(b => b.classList.remove('active'));
-      document.getElementById(tabName).classList.add('active');
-      document.querySelector(`button[onclick="openTab('${tabName}')"]`).classList.add('active');
-      if (tabName === 'add-items' || tabName === 'view-shops') loadShops();
-    }
-
+    // Load shops
     async function loadShops() {
-      const res = await fetch(`${API}/api/shops`);
+      const res = await fetch(API + "/api/shops");
       const data = await res.json();
-      if (data.success) {
-        const select = document.getElementById("itemShopSelect");
-        select.innerHTML = '<option value="">Choose Shop</option>';
-        data.shops.forEach(shop => {
-          const opt = document.createElement("option");
-          opt.value = shop._id; opt.textContent = shop.shopName;
-          select.appendChild(opt);
-        });
-        renderShopList(data.shops);
-      }
-    }
-
-    function renderShopList(shops) {
-      const list = document.getElementById("shopsList");
-      list.innerHTML = shops.map(shop => `
-        <div class="shop-card">
-          <h3>${shop.shopName} ${shop.ownerName ? `(${shop.ownerName})` : ''}</h3>
-          <p>Mobile: ${shop.mobile || '—'}</p>
-          <p><strong>Items (${shop.items.length}):</strong></p>
-          ${shop.items.map(item => `
-            <div style="margin:10px 0;padding:10px;background:#fff;border-radius:8px;">
-              <strong>${item.name}</strong> - ₹${item.price}
-              ${item.description ? `<br><small>${item.description}</small>` : ''}
-              ${item.imageUrl?.length ? `<div class="image-preview">
-                ${item.imageUrl.map(url => `<img src="${url}" class="preview-img">`).join('')}
-              </div>` : ''}
-            </div>
-          `).join('')}
-        </div>
-      `).join('');
-    }
-
-    async function addShop() {
-      const shopName = document.getElementById("shopName").value.trim();
-      const ownerName = document.getElementById("ownerName").value.trim();
-      const mobile = document.getElementById("mobile").value.trim();
-      if (!shopName) return alert("Shop name required");
-
-      const res = await fetch(`${API}/api/admin/add-shop`, {
-        method: "POST",
-        headers: {"Content-Type": "application/json"},
-        body: JSON.stringify({shopName, ownerName, mobile})
+      const select = document.getElementById("shopSelect");
+      select.innerHTML = '<option value="">Choose Shop *</option>';
+      data.shops.forEach(shop => {
+        const opt = document.createElement("option");
+        opt.value = shop._id;
+        opt.textContent = shop.shopName;
+        select.appendChild(opt);
       });
-      const data = await res.json();
-      document.getElementById("shopMsg").innerHTML = data.success 
-        ? "<div class='success'>Shop added successfully!</div>" 
-        : "<div style='color:red'>Error: " + (data.message || "Failed") + "</div>";
-      if (data.success) {
-        document.getElementById("shopName").value = "";
-        loadShops();
-      }
     }
 
-    let selectedImages = [];
-    document.getElementById("itemImages").onchange = function(e) {
-      selectedImages = Array.from(e.target.files);
-      const preview = document.getElementById("imagePreview");
-      preview.innerHTML = selectedImages.map((file, i) => `
-        <div style="position:relative">
-          <img src="${URL.createObjectURL(file)}" class="preview-img">
-          <div class="remove-img" onclick="selectedImages.splice(${i},1); this.parentElement.remove()">×</div>
-        </div>
-      `).join('');
+    // Add Shop
+    document.getElementById("shopForm").onsubmit = async (e) => {
+      e.preventDefault();
+      const shopName = document.getElementById("shopName").value.trim();
+      if (!shopName) return alert("Shop name required!");
+
+      const res = await fetch(API + "/api/admin/add-shop", {
+        method: "POST",
+        headers: { "Content-Type": "application/json" },
+        body: JSON.stringify({
+          shopName,
+          ownerName: document.getElementById("ownerName").value,
+          mobile: document.getElementById("shopMobile").value
+        })
+      });
+      const json = await res.json();
+      if (json.success) {
+        showSuccess("Shop added successfully!");
+        document.getElementById("shopForm").reset();
+        loadShops();
+      } else alert("Error: " + (json.message || "Failed"));
     };
 
-    async function addItem() {
-      const shopId = document.getElementById("itemShopSelect").value;
-      const name = document.getElementById("itemName").value.trim();
-      const price = parseFloat(document.getElementById("itemPrice").value);
-      const description = document.getElementById("itemDesc").value.trim();
+    // Image Preview
+    document.getElementById("itemImages").onchange = (e) => {
+      const preview = document.getElementById("imagePreview");
+      preview.innerHTML = "";
+      [...e.target.files].forEach(file => {
+        const img = document.createElement("img");
+        img.src = URL.createObjectURL(file);
+        img.className = "preview-img";
+        preview.appendChild(img);
+      });
+    };
 
-      if (!shopId || !name || !price) return alert("Fill all fields");
+    // Add Item
+    document.getElementById("itemForm").onsubmit = async (e) => {
+      e.preventDefault();
+      const shopId = document.getElementById("shopSelect").value;
+      const name = document.getElementById("itemName").value.trim();
+      const price = document.getElementById("itemPrice").value;
+      if (!shopId || !name || !price) return alert("Fill all required fields!");
 
       const formData = new FormData();
       formData.append("shopId", shopId);
       formData.append("name", name);
       formData.append("price", price);
-      if (description) formData.append("description", description);
-      selectedImages.forEach((file, i) => formData.append("images", file));
+      formData.append("description", document.getElementById("itemDesc").value);
 
-      const res = await fetch(`${API}/api/admin/add-item`, {
+      const files = document.getElementById("itemImages").files;
+      for (let i = 0; i < files.length; i++) {
+        formData.append("images", files[i]);
+      }
+
+      const res = await fetch(API + "/api/admin/add-item", {
         method: "POST",
         body: formData
       });
-      const data = await res.json();
-      document.getElementById("itemMsg").innerHTML = data.success 
-        ? "<div class='success'>Item added!</div>" 
-        : "<div style='color:red'>Error: " + (data.message || "Failed") + "</div>";
-
-      if (data.success) {
-        document.getElementById("itemName").value = "";
-        document.getElementById("itemPrice").value = "";
-        document.getElementById("itemDesc").value = "";
-        document.getElementById("itemImages").value = "";
-        selectedImages = [];
+      const json = await res.json();
+      if (json.success) {
+        showSuccess("Item added successfully!");
+        document.getElementById("itemForm").reset();
         document.getElementById("imagePreview").innerHTML = "";
-        loadShops();
+      } else {
+        alert("Error: " + (json.message || "Failed to add item"));
       }
+    };
+
+    function showSuccess(msg) {
+      const alert = document.getElementById("successAlert");
+      document.getElementById("successMsg").textContent = msg;
+      alert.classList.remove("d-none");
+      setTimeout(() => alert.classList.add("d-none"), 4000);
     }
 
-    // Load shops on start
+    // Load shops on page load
     loadShops();
   </script>
 </body>
