--- a/indexp.html
+++ b/indexp.html
@@ -18,37 +18,28 @@
     *{box-sizing:border-box;margin:0;padding:0;font-family:"Outfit",system-ui}
     html,body{height:100%}
     body{background:linear-gradient(180deg,var(--bg),#fff6da 120px);color:var(--text);min-height:100vh;overflow-x:hidden}
-    
+   
     .floating-icons{position:fixed;inset:0;pointer-events:none;z-index:0;overflow:hidden}
     .float-svg{position:absolute;opacity:0.1;animation:gentleFloat 9s ease-in-out infinite}
     .float-1{left:6%;top:12%;width:88px}.float-2{right:6%;bottom:8%;width:110px;opacity:0.12}
     .float-3{left:50%;top:40%;width:120px;transform:translateX(-50%) rotate(-8deg)}.float-4{left:8%;bottom:20%;width:72px;opacity:0.08}
     @keyframes gentleFloat{0%,100%{transform:translateY(0) rotate(0deg)}50%{transform:translateY(-18px) rotate(6deg)}}
-
     header{position:sticky;top:0;z-index:120;display:flex;align-items:center;gap:12px;padding:14px 18px;background:var(--primary);box-shadow:0 6px 18px var(--shadow);}
     .nav-btn{width:46px;height:46px;border-radius:12px;background:rgba(255,255,255,0.6);display:grid;place-items:center;cursor:pointer;border:1px solid rgba(0,0,0,0.04)}
     .brand{font-weight:800;font-size:20px;color:#111;display:flex;gap:6px;align-items:center}
     .brand span{color:var(--accent);font-weight:900}
     .header-right{margin-left:auto;display:flex;gap:10px;align-items:center}
-
-    /* Cart & Bell Buttons - Same Style */
     .cart-btn, .bell-btn{
       background:var(--accent);color:white;padding:10px 14px;border-radius:12px;font-weight:700;
       cursor:pointer;box-shadow:0 6px 18px rgba(255,59,48,0.3);display:flex;align-items:center;gap:6px;
     }
     .bell-btn{width:46px;height:46px;padding:0;justify-content:center;position:relative;}
-    .bell-btn .badge{
-      position:absolute;top:-6px;right:-6px;background:#ff3b30;color:white;width:18px;height:18px;
-      border-radius:50%;font-size:10px;font-weight:800;display:grid;place-items:center;
-    }
-
     .sidebar{position:fixed;left:-100%;top:0;width:320px;height:100%;z-index:220;background:linear-gradient(180deg,#fff,#fff9e6);padding:18px;box-shadow:6px 20px 60px rgba(0,0,0,0.12);transition:left .32s ease}
     .sidebar.active{left:0}
     .profile-section{background:linear-gradient(180deg,#fff,#fff9db);border-radius:12px;padding:14px;border:1px solid var(--glass-border);display:flex;gap:12px;align-items:center}
     .profile-section .avatar{width:56px;height:56px;border-radius:12px;background:linear-gradient(90deg,#fff7c2,#fff2a8);display:flex;align-items:center;justify-content:center;font-size:28px;color:var(--primary)}
     .overlay{position:fixed;inset:0;background:rgba(0,0,0,0.45);z-index:210;display:none}
     .overlay.active{display:block}
-
     main{max-width:1180px;margin:22px auto;padding:0 18px;position:relative;z-index:2}
     .offer-slider{max-width:860px;margin:0 auto 20px;border-radius:16px;overflow:hidden;border:1px solid rgba(255,59,48,0.15);box-shadow:0 20px 50px rgba(0,0,0,0.06)}
     .slides{display:flex;width:400%;animation:slide 18s infinite linear}
@@ -56,18 +47,15 @@
     .slide::after{content:"";position:absolute;inset:0;background:linear-gradient(90deg,rgba(255,215,0,0.22),rgba(255,59,48,0.12));mix-blend-mode:multiply}
     .slide .label{position:relative;z-index:2;background:var(--accent);color:white;padding:12px 18px;border-radius:999px;font-weight:800;border:1px solid rgba(255,255,255,0.4);box-shadow:0 8px 30px rgba(255,59,48,0.4);}
     @keyframes slide{0%{transform:translateX(0%)}24%{transform:translateX(0%)}28%{transform:translateX(-100%)}52%{transform:translateX(-100%)}56%{transform:translateX(-200%)}80%{transform:translateX(-200%)}84%{transform:translateX(-300%)}100%{transform:translateX(-300%)}}
-
     .tab-switch{display:flex;gap:12px;max-width:860px;margin:18px auto;justify-content:center}
     .tab-btn{flex:1;padding:12px 16px;border-radius:999px;font-weight:800;border:1px solid rgba(17,17,17,0.04);display:flex;align-items:center;justify-content:center;text-decoration:none}
     .tab-btn.food{background:linear-gradient(90deg,var(--primary),#ffd800);color:#111;box-shadow:0 4px 10px rgba(255,215,0,0.2)}
     .tab-btn.grocery{background:#fff;color:#111}
     .tab-btn.inactive{opacity:0.6;background:#f7f7f7 !important;box-shadow:none}
-
     .search-bar{max-width:860px;margin:12px auto 20px;position:relative}
     .search-bar input{width:100%;padding:14px 46px 14px 18px;border-radius:999px;border:1px solid rgba(0,0,0,0.06);background:white;font-size:15px}
     .search-bar input:focus{outline:none;box-shadow:0 12px 30px rgba(255,215,0,0.2)}
     .search-bar .icon{position:absolute;right:14px;top:50%;transform:translateY(-50%);color:var(--accent);font-size:16px}
-
     .grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(240px,1fr));gap:18px}
     .card-wrap{position:relative}
     .card{background:var(--card);border-radius:14px;overflow:hidden;cursor:pointer;transition:transform .28s,box-shadow .28s;border:1px solid rgba(0,0,0,0.04);box-shadow:0 4px 12px var(--shadow)}
@@ -80,7 +68,6 @@
     .items-row{display:flex;flex-wrap:wrap;gap:8px;padding:0 14px 18px}
     .item-pill{background:#fff6db;padding:6px 10px;border-radius:999px;font-size:12px;font-weight:700}
     .badge-offer{position:absolute;top:12px;left:12px;background:var(--accent);color:white;padding:8px 12px;border-radius:8px;font-weight:800;font-size:13px}
-
     footer{padding:18px;text-align:center;color:var(--muted);margin-top:36px}
     @media (max-width:640px){
       header{padding:12px}.brand{font-size:18px}
@@ -90,8 +77,6 @@
   </style>
 </head>
 <body>
-
-  <!-- Floating Icons - SAME -->
   <div class="floating-icons" aria-hidden="true">
     <svg class="float-svg float-1" viewBox="0 0 64 64"><g fill="none"><path d="M32 2C18 2 6.5 10 2 22c5 10 20 28 30 40 10-12 25-30 30-40C57.5 10 46 2 32 2z" fill="#FFEAA7"/><circle cx="26" cy="34" r="3" fill="#FF8A65"/><circle cx="36" cy="28" r="2.5" fill="#FF8A65"/></g></svg>
     <svg class="float-svg float-2" viewBox="0 0 64 64"><rect x="4" y="22" width="56" height="20" rx="10" fill="#FFD54A"/><path d="M6 26h52v8H6z" fill="#D84315"/></svg>
@@ -99,29 +84,19 @@
     <svg class="float-svg float-4" viewBox="0 0 64 64"><path d="M12 16h28v22H12z" fill="#FFF8E1"/><path d="M40 22h6a8 8 0 110 16h-6z" fill="#FFD54A"/></svg>
   </div>
 
-  <!-- Header with Bell + Cart -->
   <header>
     <button id="navBtn" class="nav-btn" aria-label="Open menu">
       <svg width="18" height="18" viewBox="0 0 24 24" fill="none"><path d="M4 7h16M4 12h16M4 17h16" stroke="#111" stroke-width="1.6" stroke-linecap="round"/></svg>
     </button>
-
     <div class="brand">Chat<span style="color:var(--accent)">Point</span></div>
-
     <div class="header-right">
-      <!-- Bell Icon -->
       <button class="bell-btn" onclick="location.href='notification.html'" aria-label="Notifications">
         <i class="fas fa-bell"></i>
-       
       </button>
-
-      <!-- Cart Button -->
-      <button class="cart-btn" onclick="location.href='cart.html'">
-        Cart
-      </button>
+      <button class="cart-btn" onclick="location.href='cart.html'">Cart</button>
     </div>
   </header>
 
-  <!-- Sidebar (unchanged) -->
   <aside id="sidebar" class="sidebar">
     <div class="profile-section" id="profileSection">
       <div class="avatar">User</div>
@@ -137,7 +112,6 @@
   </aside>
   <div id="overlay" class="overlay"></div>
 
-  <!-- Rest of your page (offer slider, tabs, search, grid) - SAME AS BEFORE -->
   <main>
     <section class="offer-slider">
       <div class="slides">
@@ -163,9 +137,8 @@
 
   <footer>© 2025 Chat Point • Made with Passion</footer>
 
-  <!-- Same script as before but with shops from database -->
   <script>
-    const API = "";
+    const API = ""; // Your backend URL here if needed
 
     async function loadShops() {
       try {
@@ -173,35 +146,48 @@
         const data = await res.json();
         if (data.success && data.shops.length > 0) renderShops(data.shops);
         else document.getElementById("grid").innerHTML = "<p style='text-align:center;padding:60px;color:#888'>No shops yet!</p>";
-      } catch { /* ignore */ }
+      } catch (e) {
+        document.getElementById("grid").innerHTML = "<p style='text-align:center;padding:60px;color:#c66'>Failed to load shops. Check internet or API URL.</p>";
+      }
     }
 
     function renderShops(shops) {
       const grid = document.getElementById("grid");
       grid.innerHTML = "";
       shops.forEach(shop => {
-        const wrap = document.createElement("div"); wrap.className = "card-wrap";
-        const card = document.createElement("div"); card.className = "card";
+        const wrap = document.createElement("div"); 
+        wrap.className = "card-wrap";
+
+        const card = document.createElement("div"); 
+        card.className = "card";
         card.onclick = () => {
           localStorage.setItem("currentShop", JSON.stringify(shop));
           location.href = `itemsp.html?shop=${encodeURIComponent(shop.shopName)}`;
         };
 
         const img = document.createElement("img");
-        img.src = shop.imageUrl?.[0] || `https://via.placeholder.com/420x260/FFD700/333?text=${shop.shopName}`;
+        img.src = shop.imageUrl?.[0] || `https://via.placeholder.com/420x260/FFD700/333?text=${encodeURIComponent(shop.shopName)}`;
         img.alt = shop.shopName;
 
-        const badge = document.createElement("div"); badge.className = "badge-offer"; badge.textContent = "NEW";
+        const badge = document.createElement("div"); 
+        badge.className = "badge-offer"; 
+        badge.textContent = "NEW";
 
-        const info = document.createElement("div"); info.className = "info";
+        const info = document.createElement("div"); 
+        info.className = "info";
         info.innerHTML = `<div class="shop-name">${shop.shopName}</div><div class="rating"><i class="fas fa-star"></i> 4.8+</div>`;
 
-        const desc = document.createElement("div"); desc.className = "desc";
+        const desc = document.createElement("div"); 
+        desc.className = "desc";
         desc.textContent = shop.ownerName ? `${shop.ownerName}'s Outlet` : "Fast Delivery";
 
-        const itemsRow = document.createElement("div"); itemsRow.className = "items-row";
-        shop.items.slice(0,4).forEach(i => {
-          const p = document.createElement("div"); p.className = "item-pill"; p.textContent = i.name; itemsRow.appendChild(p);
+        const itemsRow = document.createElement("div"); 
+        itemsRow.className = "items-row";
+        (shop.items || []).slice(0,4).forEach(i => {
+          const p = document.createElement("div"); 
+          p.className = "item-pill"; 
+          p.textContent = i.name || i; 
+          itemsRow.appendChild(p);
         });
 
         card.append(img, info, desc, itemsRow);
@@ -218,7 +204,7 @@
       });
     }
 
-    // Sidebar
+    // Sidebar Toggle
     document.getElementById("navBtn").onclick = () => {
       document.getElementById("sidebar").classList.add("active");
       document.getElementById("overlay").classList.add("active");
@@ -228,15 +214,22 @@
       document.getElementById("overlay").classList.remove("active");
     };
 
-    // Profile
+    // User Profile & Logout
     const user = JSON.parse(localStorage.getItem("chatpoint_user") || "null");
     if (user) {
-      document.getElementById("profileSection").innerHTML = `<div style="display:flex;gap:12px;align-items:center">
-        <div class="avatar"><i class="fas fa-user"></i></div>
-        <div><div style="font-weight:800">${user.name}</div>
-        <div style="font-size:13px;color:var(--muted)">${user.phone}</div></div></div>`;
+      document.getElementById("profileSection").innerHTML = `
+        <div style="display:flex;gap:12px;align-items:center">
+          <div class="avatar"><i class="fas fa-user"></i></div>
+          <div>
+            <div style="font-weight:800">${user.name}</div>
+            <div style="font-size:13px;color:var(--muted)">${user.phone}</div>
+          </div>
+        </div>`;
       document.getElementById("logout").style.display = "block";
-      document.getElementById("logout").onclick = () => { localStorage.removeItem("chatpoint_user"); location.reload(); };
+      document.getElementById("logout").onclick = () => { 
+        localStorage.removeItem("chatpoint_user"); 
+        location.reload(); 
+      };
     }
 
     loadShops();
